# django_base

./: .coveragerc  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
core/: celery.py  settings.py  urls.py
core/base/: models.py  paginations.py  permissions.py
